# skeleton-fastapi

./: .gitignore  README.md  commands.py  docker-compose.yml  fastapi-skeleton.code-workspace  mkdocs.yml  pyproject.toml
.envs/: develop.env  production.example.env
application/: api.py  main.py
application/apps/authentication/: crud.py  cryptography.py  dependencies.py  exceptions.py  models.py  routes.py
application/apps/authentication/tests/: conftest.py  fixtures.py  test_auth_routes.py  test_user_crud.py
application/apps/public/: routes.py
application/apps/public/tests/: test_routes.py
application/common/: dependencies.py  exceptions.py  imports.py  types.py
application/common/tests/: test_common_routes.py
application/config/: __init__.py  base.py  logging.py  validators.py
application/database/: dependencies.py  revisions.py  sqlmodel.py
compose/: Dockerfile  entrypoint.sh  start.sh
docs/: index.md
migrations/: env.py
migrations/versions/: 78b54447b60e_initial.py
notebooks/: interactive_debugger_api.ipynb
resources/: diagram.uxf
